<resources>
    <string name="app_name">R\'Lifts</string>

    <!-- Strings related to login -->



    <!-- Change strings so that we have 2 seperate buttons for login and register -->
    <string name="prompt_random_string">Enter Completion Code from Rider</string>
    <string name="state">State</string>
    <string name="leave_time">Departure Time</string>
    <string name="Car_brand">Car Brand</string>
    <string name="Car_model">Car Model</string>
    <string name="Car_year">Car Year</string>
    <string name="Car_color">Car Color</string>
    <string name="drivers_license">Drivers License #</string>
    <string name="license_plate">Car License Plate</string>
    <string name="Choice1"></string>
    <string name="Select">Select</string>
    <string name="Post_ride">Post ride</string>
    <string name="Driver_destination">Destination</string>
    <string name="Driver_start">Start</string>
    <string name="sign_out">Sign out</string>
    <string name="signing_in">Signing in</string>
    <string name="disconnect">Disconnect</string>
    <string name="title_text">Title Text</string>
    <string name="desc_google_icon">Some description</string>
    <string name="prompt_email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Create_profile">Create Profile</string>
    <string name="First_name">First Name</string>
    <string name="Last_name">Last Name</string>
    <string name="Username">Username</string>
    <string name="Birthday">Birthday(MM/DD/YYYY)</string>
    <string name="Phone_num">Phone Number(1234567890)</string>
    <string name="Submit">Submit</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="register">Register</string>
    <string name="facebook_app_id">960098060714352</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register_new_user">Register</string>
    <string name="title_activity_rider_or_driver">RiderOrDriverActivity</string>
    <string name="title_activity_google_login">GoogleLogin</string>
    <string name="title_activity_facebook_login">FacebookLogin</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome_text">Welcome to R\'Lifts</string>
    <string name="riderbutton">I want to get a Ride</string>
    <string name="driverbutton">I want to be a Driver</string>
    <string name="paragraph">Open the navigation drawer by pressing the menu icon in the top-left corner.
        From this menu, you have a few options, described in detail below.
        <!-- \u2022Logout: Logout of your account.\n
        Thanks for using RLifts! :)  -->
        </string>
    <string name="text_1">View your profile information.</string>
    <string name="text_2">Opens a list of rides near you that you can request. </string>
    <string name="text_3">Allows you post a ride. Once your ride is posted,
        riders near you will be able to see it and request your ride.
        If a rider requests your ride, you\'ll receive a notification </string>
    <string name="text_4">Add mile tokens to your account via PayPal </string>
    <string name="text_5">Look at the rides and drivers you have requested in the past.</string>
        From this menu, you have a few options, described in detail below.\n
        \u2022Profile: View your profile information.\n
        \u2022Rider: Opens a list of rides near you that you can request. You can filter the list by.... (to be added)\n
        \u2022Driver: Allows you to register as a driver and post a ride. Once your ride is posted, riders near you will be able to see it and request your ride.
        If a rider requests your ride, you\'ll receive a notification and can either
        accept or decline their request.\n
        \u2022Add Tokens: Add mile tokens to your account via PayPal, which is the currency used by riders to pay drivers. If you do
        not have enough tokens, you will not be allowed to request the ride.\n
        \u2022Ride History: Look at the rides and drivers you have requested in the past.\n
        \u2022Logout: Logout of your account.\n
        Thanks for using RLifts! :)
        \n</string>
    <string name="rider_filter_header">Ride Filtering Options:</string>
    <string name="rider_filter_leave_time">Leave Time:</string>
    <string name="rider_filter_cost">Cost</string>





    <string-array name="list">
        <item>Edit Profile</item>
        <item>About</item>
    </string-array>

    <string-array name="list2">
        <item>Profile</item>
        <item>Rider</item>
        <item>Driver</item>
        <item>Add Token</item>
        <item>Ride History</item>
        <item>Logout</item>
    </string-array>








    <string name="title_activity_driver_registration">DriverRegistration</string>
    <string name="title_activity_paypal">PaypalActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_edit_profile">Edit_profile</string>
    <string name="title_activity_editprofile">Edit Profile</string>
    <string name="title_activity_driving_in_progress">DrivingInProgress</string>
    <string name="title_activity_drop_off_rider">DropOffRider</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="title_activity_filters">Filters</string>
    <string name="title_activity_wait_for_driver_response">WaitForDriverResponse</string>
</resources>
