<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ucr.cs180.rlifts.register_new_user"
    android:background="#263238">



    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:measureAllChildren="false">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">
            <!--Profile pics -->
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageButton
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/imageButton"
                android:scaleType="fitCenter"
                android:src="@drawable/addphoto_icon"
                android:background="#263238"
                android:layout_gravity="center_horizontal"
                android:layout_below="@+id/editText"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
            </android.support.design.widget.TextInputLayout>
            <!--First name -->
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView android:id="@+id/firstname" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/first_name"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <!--Last name -->
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/lastname" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/last_name"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <!--User name -->
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Username"
                    android:layout_below="@+id/editText4"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:id="@+id/editText5"
                    android:layout_alignRight="@+id/editText4"
                    android:layout_alignEnd="@+id/editText4" />
            </android.support.design.widget.TextInputLayout>
            <!--Phone number -->
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Phone_num"
                    android:layout_below="@+id/editText"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="33dp"
                    android:id="@+id/editText2"
                    android:layout_alignRight="@+id/editText6"
                    android:layout_alignEnd="@+id/editText6" />
            </android.support.design.widget.TextInputLayout>
            <!-- Password -->
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/reg_password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <!-- confirm password -->
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/reg_confirm_password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/confirm_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <!-- Register button -->
            <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/register"
                android:textStyle="bold"
                android:background="#00bbb3"
                android:textSize="20dp"
                android:textColor="#ffffff" />



        </LinearLayout>
    </ScrollView>
</RelativeLayout>
